# jackal-swarm-simulation

./: Bridge.sh  Master_bridge.sh  README.md
multi_jackal_base/: package.xml
multi_jackal_base/launch/: Jackal_launch_multi.launch.py  base_jackal.launch  jackal_gazebo.launch  three_jackal.launch
multi_jackal_control/: CMakeLists.txt  package.xml
multi_jackal_control/config/: robot_localization.yaml  robot_localization_backup.yaml
multi_jackal_control/scripts/: random_explore_without_limits.py
multi_jackal_description/: CMakeLists.txt  package.xml
multi_jackal_description/urdf/: jackal.urdf  sick_lms1xx.urdf.xacro
multi_jackal_description/urdf/configs/: ouster
multi_jackal_simulation_rob/multi_jackal_base/: CMakeLists.txt
multi_jackal_simulation_rob/multi_jackal_base/launch/: Jackal_launch_multi.launch.py  one_jackal.launch  two_jackal.launch
multi_jackal_simulation_rob/multi_jackal_base/rviz/: two_jackals.rviz
multi_jackal_simulation_rob/multi_jackal_control/config/: tempalte.yaml
multi_jackal_simulation_rob/multi_jackal_control/launch/: control.launch
multi_jackal_simulation_rob/multi_jackal_description/launch/: description.launch
multi_jackal_simulation_rob/multi_jackal_description/meshes/: ulu02.STL
multi_jackal_simulation_rob/multi_jackal_description/urdf/: OS1-64.urdf.xacro  jackal.gazebo  jackal_all.urdf.xacro
