<?xml version="1.0"?>
<package>
  <name>multi_jackal_description</name>
  <version>0.7.0</version>
  <description>URDF robot description for Jackal</description>

  <maintainer email="schilling@rob.uni-luebeck.de">Lars Schilling</maintainer>

  <license>BSD</license>

  <author email="schilling@rob.uni-luebeck.de">Lars Schilling</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>pointgrey_camera_description</run_depend>

  <export>
  </export>
</package>
